Implementación de envio de mensaje y configuracion de reglas en búsquedas