@@ -2,21 +2,26 @@ package com.mwgroup.hydra.utils;
 
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.lang.reflect.Type;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.net.http.*; 
 
-import org.apache.http.HttpEntity;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.ResponseHandler;
-import org.apache.http.client.methods.HttpPost;
-import org.apache.http.impl.client.BasicResponseHandler;
-import org.apache.http.impl.client.DefaultHttpClient;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.gson.Gson;
 import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+import com.google.gson.reflect.TypeToken;
+import com.mwgroup.hydra.model.Searches;
 import com.mwgroup.hydra.model.SendPostModel;
 
 @Component
@@ -31,43 +36,53 @@ public class Utilities {
 	public Boolean sendPostTweet(SendPostModel req) {
 		Boolean result = false;
 		try {
-			HttpClient httpClient = new DefaultHttpClient();
-			HttpPost request = new HttpPost(URL_SEND_POST);
-		    request.addHeader("content-type", "application/json");
-		    request.addHeader("Accept","application/json");
-		    
-		    req.setToken(TOKEN_TW);
+			System.out.println("");
+			System.out.println("sendPostTweet");
+			System.out.println(URL_SEND_POST);
+			req.setToken("");
 		    req.setChannel("telegram");
 		    req.setType("chat");
 		    req.setFrom("");
-		    request.setEntity((HttpEntity) req);
-		    ResponseHandler<String> responseHandler = new BasicResponseHandler();
 		    
-		    String response = httpClient.execute(request, responseHandler);
-		    System.out.println(response);
-		    
-			JsonElement jelement = new JsonParser().parse(response);
-			JsonObject  jobject = jelement.getAsJsonObject();
-			if(jobject.get("success").getAsBoolean()) {
-				System.out.println("");
-			}
+			var request = HttpRequest.newBuilder()
+					.uri(URI.create(URL_SEND_POST))
+					.header("Content-type", "application/json")
+					.POST(HttpRequest.BodyPublishers.ofString(new Gson().toJson(req)))				
+					.build();
+			var client = HttpClient.newHttpClient();
+			var response = client.send(request, HttpResponse.BodyHandlers.ofString());
 			
+			System.out.println(response.statusCode());
+			System.out.println(response.body());
+			System.out.println(response.body().getClass());
+			ObjectMapper mapper = new ObjectMapper();
+			Map<String, Object> map = mapper.readValue(response.body(), Map.class);
+			var sended = map.get("sended");
+			if(!(Boolean)sended) {
+				System.out.println("No fue posible enviar el mensaje");
+			}
+
 			return result;
 		} catch (Exception ex) {
+			System.out.println(ex);
 			return result;
 		}
 	}
-	public String getDataClients() {
-		String result = "";
+	public List<Searches> getDataClients() {
+		List<Searches> result = new ArrayList<Searches>();
 		try {
 
-		    URL url = new URL(URL_SEARCHES);
-		    URLConnection request = url.openConnection();
-		    request.connect();
-		    // Convert to a JSON object to print data
-		    JsonParser jp = new JsonParser(); 
-		    JsonElement root = jp.parse(new InputStreamReader((InputStream) request.getContent()));
-		    
+		    var rq = HttpRequest.newBuilder()
+					.uri(URI.create(URL_SEARCHES))
+					.header("Content-type", "application/json")
+					.GET()				
+					.build();
+			var client = HttpClient.newHttpClient();
+			var response = client.send(rq, HttpResponse.BodyHandlers.ofString());
+			System.out.println(response.statusCode());
+			System.out.println(response.body().getClass());
+			Type listType = new TypeToken<List<Searches>>() {}.getType();
+			result = new Gson().fromJson(response.body(), listType);
 			return result;
 		} catch (Exception ex) {
 			return result;
@@ -89,9 +104,26 @@ public class Utilities {
 			text.replace("ó", "o");
 			text.replace("ú", "u");
 			
-			return result;
+			return text;
 		} catch (Exception e) {
 			return result;
 		}
+	}
+	
+	
+	public StringBuilder getMessage(String date, String text, String url) {
+		StringBuilder sb = new StringBuilder();
+		try {
+			
+			sb.append("FECHA Y HORA: \n"+date );
+			sb.append("\n" );
+			sb.append("\nTEXTO: \n"+text );
+			sb.append("\n" );
+			sb.append("\nLIGA: \n"+url );
+		} catch (Exception e) {
+			// TODO: handle exception
+			System.out.println(e);
+		}
+		return sb;
 	}
 }
